Bug 416854 - Breeze style crashed Dolphin?
Summary: Breeze style crashed Dolphin?
Status: RESOLVED FIXED
Alias: None
Product: Breeze
Classification: Plasma
Component: QStyle (other bugs)
Version First Reported In: 5.17.90
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords: drkonqi
: 416855 416880 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-01-28 10:39 UTC by Tony
Modified: 2020-01-28 20:26 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.19.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tony 2020-01-28 10:39:36 UTC
Application: dolphin (20.03.70)

Qt Version: 5.14.0
Frameworks Version: 5.67.0
Operating System: Linux 5.4.13-1-default x86_64
Windowing system: X11
Distribution: "openSUSE Tumbleweed"

-- Information about the crash:
- What I was doing when the application crashed:

I close a Dolphin window which had 3 tabs open, i got the crash notification right after.

The crash can be reproduced sometimes.

-- Backtrace:
Application: Dolphin (dolphin), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f88c4b4b800 (LWP 3385))]

Thread 19 (Thread 0x7f8880aff700 (LWP 4445)):
#0  0x00007f88c563cabf in poll () from /lib64/libc.so.6
#1  0x00007f88c1d854f2 in ?? () from /usr/lib64/libpulse.so.0
#2  0x00007f88c1d76e39 in pa_mainloop_poll () from /usr/lib64/libpulse.so.0
#3  0x00007f88c1d774bf in pa_mainloop_iterate () from /usr/lib64/libpulse.so.0
#4  0x00007f88c1d77570 in pa_mainloop_run () from /usr/lib64/libpulse.so.0
#5  0x00007f88c1d85439 in ?? () from /usr/lib64/libpulse.so.0
#6  0x00007f88c0c37c78 in ?? () from /usr/lib64/pulseaudio/libpulsecommon-13.0.so
#7  0x00007f88c1dd0f2a in start_thread () from /lib64/libpthread.so.0
#8  0x00007f88c564738f in clone () from /lib64/libc.so.6

Thread 18 (Thread 0x7f88827fc700 (LWP 3403)):
#0  0x00007f88c1dd76a5 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f88b7096c2b in ?? () from /usr/lib64/dri/radeonsi_dri.so
#2  0x00007f88b7096b07 in ?? () from /usr/lib64/dri/radeonsi_dri.so
#3  0x00007f88c1dd0f2a in start_thread () from /lib64/libpthread.so.0
#4  0x00007f88c564738f in clone () from /lib64/libc.so.6

Thread 17 (Thread 0x7f8882ffd700 (LWP 3402)):
#0  0x00007f88c1dd76a5 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f88b7096c2b in ?? () from /usr/lib64/dri/radeonsi_dri.so
#2  0x00007f88b7096b07 in ?? () from /usr/lib64/dri/radeonsi_dri.so
#3  0x00007f88c1dd0f2a in start_thread () from /lib64/libpthread.so.0
#4  0x00007f88c564738f in clone () from /lib64/libc.so.6

Thread 16 (Thread 0x7f88837fe700 (LWP 3401)):
#0  0x00007f88c1dd76a5 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f88b7096c2b in ?? () from /usr/lib64/dri/radeonsi_dri.so
#2  0x00007f88b7096b07 in ?? () from /usr/lib64/dri/radeonsi_dri.so
#3  0x00007f88c1dd0f2a in start_thread () from /lib64/libpthread.so.0
#4  0x00007f88c564738f in clone () from /lib64/libc.so.6

Thread 15 (Thread 0x7f8883fff700 (LWP 3400)):
#0  0x00007f88c1dd76a5 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f88b7096c2b in ?? () from /usr/lib64/dri/radeonsi_dri.so
#2  0x00007f88b7096b07 in ?? () from /usr/lib64/dri/radeonsi_dri.so
#3  0x00007f88c1dd0f2a in start_thread () from /lib64/libpthread.so.0
#4  0x00007f88c564738f in clone () from /lib64/libc.so.6

Thread 14 (Thread 0x7f88a8d92700 (LWP 3399)):
#0  0x00007f88c1dd76a5 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f88b7096c2b in ?? () from /usr/lib64/dri/radeonsi_dri.so
#2  0x00007f88b7096b07 in ?? () from /usr/lib64/dri/radeonsi_dri.so
#3  0x00007f88c1dd0f2a in start_thread () from /lib64/libpthread.so.0
#4  0x00007f88c564738f in clone () from /lib64/libc.so.6

Thread 13 (Thread 0x7f88a9593700 (LWP 3398)):
#0  0x00007f88c1dd76a5 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f88b7096c2b in ?? () from /usr/lib64/dri/radeonsi_dri.so
#2  0x00007f88b7096b07 in ?? () from /usr/lib64/dri/radeonsi_dri.so
#3  0x00007f88c1dd0f2a in start_thread () from /lib64/libpthread.so.0
#4  0x00007f88c564738f in clone () from /lib64/libc.so.6

Thread 12 (Thread 0x7f88a9d94700 (LWP 3397)):
#0  0x00007f88c1dd76a5 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f88b7096c2b in ?? () from /usr/lib64/dri/radeonsi_dri.so
#2  0x00007f88b7096b07 in ?? () from /usr/lib64/dri/radeonsi_dri.so
#3  0x00007f88c1dd0f2a in start_thread () from /lib64/libpthread.so.0
#4  0x00007f88c564738f in clone () from /lib64/libc.so.6

Thread 11 (Thread 0x7f88aa595700 (LWP 3396)):
#0  0x00007f88c1dd76a5 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f88b7096c2b in ?? () from /usr/lib64/dri/radeonsi_dri.so
#2  0x00007f88b7096b07 in ?? () from /usr/lib64/dri/radeonsi_dri.so
#3  0x00007f88c1dd0f2a in start_thread () from /lib64/libpthread.so.0
#4  0x00007f88c564738f in clone () from /lib64/libc.so.6

Thread 10 (Thread 0x7f88aad96700 (LWP 3395)):
#0  0x00007f88c1dd76a5 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f88b7096c2b in ?? () from /usr/lib64/dri/radeonsi_dri.so
#2  0x00007f88b7096b07 in ?? () from /usr/lib64/dri/radeonsi_dri.so
#3  0x00007f88c1dd0f2a in start_thread () from /lib64/libpthread.so.0
#4  0x00007f88c564738f in clone () from /lib64/libc.so.6

Thread 9 (Thread 0x7f88ab597700 (LWP 3394)):
#0  0x00007f88c1dd76a5 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f88b7096c2b in ?? () from /usr/lib64/dri/radeonsi_dri.so
#2  0x00007f88b7096b07 in ?? () from /usr/lib64/dri/radeonsi_dri.so
#3  0x00007f88c1dd0f2a in start_thread () from /lib64/libpthread.so.0
#4  0x00007f88c564738f in clone () from /lib64/libc.so.6

Thread 8 (Thread 0x7f88b4a93700 (LWP 3393)):
#0  0x00007f88c1dd76a5 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f88b7096c2b in ?? () from /usr/lib64/dri/radeonsi_dri.so
#2  0x00007f88b7096b07 in ?? () from /usr/lib64/dri/radeonsi_dri.so
#3  0x00007f88c1dd0f2a in start_thread () from /lib64/libpthread.so.0
#4  0x00007f88c564738f in clone () from /lib64/libc.so.6

Thread 7 (Thread 0x7f88b5294700 (LWP 3392)):
#0  0x00007f88c1dd76a5 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f88b7096c2b in ?? () from /usr/lib64/dri/radeonsi_dri.so
#2  0x00007f88b7096b07 in ?? () from /usr/lib64/dri/radeonsi_dri.so
#3  0x00007f88c1dd0f2a in start_thread () from /lib64/libpthread.so.0
#4  0x00007f88c564738f in clone () from /lib64/libc.so.6

Thread 6 (Thread 0x7f88b5a95700 (LWP 3391)):
#0  0x00007f88c1dd76a5 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f88b7096c2b in ?? () from /usr/lib64/dri/radeonsi_dri.so
#2  0x00007f88b7096b07 in ?? () from /usr/lib64/dri/radeonsi_dri.so
#3  0x00007f88c1dd0f2a in start_thread () from /lib64/libpthread.so.0
#4  0x00007f88c564738f in clone () from /lib64/libc.so.6

Thread 5 (Thread 0x7f88b6296700 (LWP 3390)):
#0  0x00007f88c1dd76a5 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f88b7096c2b in ?? () from /usr/lib64/dri/radeonsi_dri.so
#2  0x00007f88b7096b07 in ?? () from /usr/lib64/dri/radeonsi_dri.so
#3  0x00007f88c1dd0f2a in start_thread () from /lib64/libpthread.so.0
#4  0x00007f88c564738f in clone () from /lib64/libc.so.6

Thread 4 (Thread 0x7f88b6a97700 (LWP 3389)):
#0  0x00007f88c1dd76a5 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f88b7096c2b in ?? () from /usr/lib64/dri/radeonsi_dri.so
#2  0x00007f88b7096b07 in ?? () from /usr/lib64/dri/radeonsi_dri.so
#3  0x00007f88c1dd0f2a in start_thread () from /lib64/libpthread.so.0
#4  0x00007f88c564738f in clone () from /lib64/libc.so.6

Thread 3 (Thread 0x7f88bd8cf700 (LWP 3388)):
#0  0x00007f88c1339ea6 in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#1  0x00007f88c133a380 in ?? () from /usr/lib64/libglib-2.0.so.0
#2  0x00007f88c133a40f in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#3  0x00007f88c35b8bdb in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQt5Core.so.5
#4  0x00007f88c3560d5b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQt5Core.so.5
#5  0x00007f88c338c63e in QThread::exec() () from /usr/lib64/libQt5Core.so.5
#6  0x00007f88c3848507 in ?? () from /usr/lib64/libQt5DBus.so.5
#7  0x00007f88c338d708 in ?? () from /usr/lib64/libQt5Core.so.5
#8  0x00007f88c1dd0f2a in start_thread () from /lib64/libpthread.so.0
#9  0x00007f88c564738f in clone () from /lib64/libc.so.6

Thread 2 (Thread 0x7f88be4cf700 (LWP 3387)):
#0  0x00007f88c563cabf in poll () from /lib64/libc.so.6
#1  0x00007f88c1e15752 in ?? () from /usr/lib64/libxcb.so.1
#2  0x00007f88c1e1640a in xcb_wait_for_event () from /usr/lib64/libxcb.so.1
#3  0x00007f88be7239a0 in ?? () from /usr/lib64/libQt5XcbQpa.so.5
#4  0x00007f88c338d708 in ?? () from /usr/lib64/libQt5Core.so.5
#5  0x00007f88c1dd0f2a in start_thread () from /lib64/libpthread.so.0
#6  0x00007f88c564738f in clone () from /lib64/libc.so.6

Thread 1 (Thread 0x7f88c4b4b800 (LWP 3385)):
[KCrash Handler]
#5  0x0000560400000000 in ?? ()
#6  0x00007f88bd949d20 in qDeleteAll<QMap<QWidget*, KWindowShadow*>::const_iterator> (end=..., begin=...) at /usr/include/qt5/QtCore/qalgorithms.h:319
#7  qDeleteAll<QMap<QWidget*, KWindowShadow*> > (c=...) at /usr/include/qt5/QtCore/qalgorithms.h:328
#8  Breeze::ShadowHelper::~ShadowHelper (this=<optimized out>, this=<optimized out>) at /usr/src/debug/breeze-5.17.80git.20200124T030746~1e04ce2e-ku.27.1.x86_64/kstyle/breezeshadowhelper.cpp:105
#9  0x00007f88bd949e49 in Breeze::ShadowHelper::~ShadowHelper (this=<optimized out>, this=<optimized out>) at /usr/src/debug/breeze-5.17.80git.20200124T030746~1e04ce2e-ku.27.1.x86_64/kstyle/breezeshadowhelper.cpp:106
#10 0x00007f88bd94a543 in Breeze::Style::~Style (this=<optimized out>, this=<optimized out>) at /usr/src/debug/breeze-5.17.80git.20200124T030746~1e04ce2e-ku.27.1.x86_64/kstyle/breezestyle.cpp:200
#11 0x00007f88bd94a629 in Breeze::Style::~Style (this=<optimized out>, this=<optimized out>) at /usr/src/debug/breeze-5.17.80git.20200124T030746~1e04ce2e-ku.27.1.x86_64/kstyle/breezestyle.cpp:202
#12 0x00007f88c414c722 in QApplication::~QApplication (this=0x7ffd558ad380, __in_chrg=<optimized out>) at kernel/qapplication.cpp:802
#13 0x00007f88c5506272 in kdemain () from /usr/lib64/libkdeinit5_dolphin.so
#14 0x00007f88c556ee0b in __libc_start_main () from /lib64/libc.so.6
#15 0x00005604f797e08a in _start ()
[Inferior 1 (process 3385) detached]

Possible duplicates by query: bug 416836, bug 416816, bug 416730, bug 416715, bug 416549.

Reported using DrKonqi
Comment 1 Christoph Feck 2020-01-28 11:51:14 UTC
*** Bug 416855 has been marked as a duplicate of this bug. ***
Comment 2 Vlad Zahorodnii 2020-01-28 16:12:12 UTC
Git commit 120fb3e01f220e894b7969b38847d5a91adcb6b0 by Vlad Zahorodnii.
Committed on 28/01/2020 at 16:12.
Pushed by vladz into branch 'master'.

[kstyle] Unregister a shadow when it's destroyed

Summary:
Since lifetime of a KWindowShadow doesn't strictly match the lifetime
of the associated widget, we need to unregister the shadow when it's
destroyed in order to prevent accessing or deleting dangling pointers
afterwards.

Reviewers: #plasma, broulik

Reviewed By: #plasma, broulik

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D26967

M  +5    -1    kstyle/oxygenshadowhelper.cpp

https://commits.kde.org/oxygen/120fb3e01f220e894b7969b38847d5a91adcb6b0
Comment 3 Vlad Zahorodnii 2020-01-28 16:12:50 UTC
Git commit cf12bf4a077def21a8bacf4cd3c9650e5c051480 by Vlad Zahorodnii.
Committed on 28/01/2020 at 16:12.
Pushed by vladz into branch 'master'.

[kstyle] Unregister a shadow when it's destroyed

Summary:
Since lifetime of a KWindowShadow doesn't strictly match the lifetime
of the associated widget, we need to unregister the shadow when it's
destroyed in order to prevent accessing or deleting dangling pointers
afterwards.

Test Plan: plasmashell no longer crashes.

Reviewers: #plasma, broulik

Subscribers: apol, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D26966

M  +5    -1    kstyle/breezeshadowhelper.cpp

https://commits.kde.org/breeze/cf12bf4a077def21a8bacf4cd3c9650e5c051480
Comment 4 Nate Graham 2020-01-28 16:22:56 UTC
I wonder if this is the plasma-integration issue we've been having recently. I was having this before but it went away after I recompiled plasma-integration from source.
Comment 5 Christoph Feck 2020-01-28 20:26:12 UTC
*** Bug 416880 has been marked as a duplicate of this bug. ***