[kstyle] Unregister a shadow when it's destroyed

Summary:
Since lifetime of a KWindowShadow doesn't strictly match the lifetime
of the associated widget, we need to unregister the shadow when it's
destroyed in order to prevent accessing or deleting dangling pointers
afterwards.

BUG: 416854

Test Plan: plasmashell no longer crashes.

Reviewers: #plasma, broulik

Subscribers: apol, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D26966